# hybrid_template_library

./: README.md  asset-manifest.json  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: how_to_calculate_templates_from_dandisets.ipynb
public/: basic.html  index.html
python/: consolidate_datasets.py  delete_templates.py  how_to_calculate_templates_from_dandisets.ipynb  how_to_calculate_templates_from_dandisets.py  upload_ibl_templates.py  upload_npultra_templates.py  upload_templates.py
src/: index.js
src/components/: App.js  CodeSnippet.js  DataTablePlot.js  ProbePlot.js  RowPlotContainer.js  SingleTemplatePlot.js
src/styles/: App.css  StyleConstants.js
src/utils/: CalculationUtils.js
static/css/: main.64a8db64.css  main.64a8db64.css.map
static/js/: 329.fc20faf8.chunk.js  329.fc20faf8.chunk.js.map  336.781877ec.chunk.js  336.781877ec.chunk.js.map  449.0dac45be.chunk.js  449.0dac45be.chunk.js.map  453.7bcb6cae.chunk.js  453.7bcb6cae.chunk.js.map  453.97f7d3b1.chunk.js  453.97f7d3b1.chunk.js.map  466.df7a3c82.chunk.js  466.df7a3c82.chunk.js.map  74.bbaa2beb.chunk.js  74.bbaa2beb.chunk.js.map  975.2484ce8f.chunk.js  975.2484ce8f.chunk.js.map  main.4f79e8f1.js.map  main.50676219.js.map  main.53e6c926.js.map  main.7d7297e7.js.map  main.8f0d6405.js.map  main.90115cd4.js.map  main.af4c5ee3.js.map  main.e51fcf55.js.LICENSE.txt  main.e51fcf55.js.map
